--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Harikrushn | Portfolio"
+      name="Alfin | Portfolio"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Harikrushn | Portfolio" />
+    <meta property="og:title" content="Alfin | Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://harikanani.github.io/" />
+    <meta property="og:url" content="https://alfinwijaya.github.io/" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -42,7 +42,6 @@
     />
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
-    <script src="./canvasjs.min.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -53,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Harikrushn | Portfolio</title>
+    <title>Alfin | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
